# Screenshot

./: CMakeLists.txt  README.md  Screenshot.sln
.github/workflows/: build-windows.yml
Screenshot/: AnnotationLayer.cpp  AnnotationLayer.h  AppSettings.cpp  AppSettings.h  CatchScreenDlg.cpp  CatchScreenDlg.h  DarkButton.cpp  DarkButton.h  DarkHotKeyFrame.cpp  DarkHotKeyFrame.h  DarkMacCheckBox.cpp  DarkMacCheckBox.h  DarkMacInputHost.cpp  DarkMacInputHost.h  DarkToolBar.cpp  DarkToolBar.h  MyEdit.cpp  MyEdit.h  MyToolBar.cpp  MyTracker.cpp  MyTracker.h  ScreenCapture.cpp  ScreenCapture.h  Screenshot.cpp  Screenshot.h  Screenshot.rc  Screenshot.vcxproj  ScreenshotDlg.cpp  ScreenshotDlg.h  SettingsDlg.cpp  SettingsDlg.h  StartupUtil.cpp  StartupUtil.h  TextAnnotOverlay.cpp  TextAnnotOverlay.h  app.manifest  resource.h  stdafx.cpp  stdafx.h  targetver.h
Screenshot/qt/: AppResources.qrc  MainWindow.cpp  MainWindow.h  QtMfcMain.cpp  ScreenshotBridge.cpp  ScreenshotBridge.h  SettingsDialog.cpp  SettingsDialog.h
docs/: BUILD-WINDOWS-QT.md
